--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "filename": "NewHorizonsConfig.dll",
-  "author": "[your name]",
-  "name": "[your readable mod name]",
-  "uniqueName": "[your name].[your unique mod ID]",
-  "version": "0.0.0",
+  "author": "BoxDog54",
+  "name": "beegPurble",
+  "uniqueName": "boxdog54.beegPurple",
+  "version": "0.0.1",
   "owmlVersion": "2.1.0",
   "dependencies": [ "xen.NewHorizons" ]
 }
